Update correct app path

--- a/.github/workflows/main_smafarecalculator.yml
+++ b/.github/workflows/main_smafarecalculator.yml
@@ -61,5 +61,5 @@ jobs:
         with:
           app-name: 'smafarecalculator'
           slot-name: 'Production'
-          package: .
+          package: 'SMAFareCalculator.API'
           
