--- a/.github/workflows/main_smafarecalculator.yml
+++ b/.github/workflows/main_smafarecalculator.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
+          path: .
 
   deploy:
     runs-on: windows-latest
