--- a/.github/workflows/main_smafarecalculator.yml
+++ b/.github/workflows/main_smafarecalculator.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: .
+          path: ./SMAFareCalculator.API/bin/Release/net8.0/publish
 
   deploy:
     runs-on: windows-latest
