--- a/.github/workflows/main_smafarecalculator.yml
+++ b/.github/workflows/main_smafarecalculator.yml
@@ -24,10 +24,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release ./src
 
       - name: dotnet publish
-        run: dotnet publish -c Release
+        run: dotnet publish -c Release ./src
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
