--- a/.github/workflows/main_smafarecalculator.yml
+++ b/.github/workflows/main_smafarecalculator.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ./SMAFareCalculator.API/bin/Release/net8.0/publish
+          path: ./src/SMAFareCalculator.API/bin/Release/net8.0/publish
 
   deploy:
     runs-on: windows-latest
